<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_8dp_margin"
    android:layout_marginLeft="@dimen/activity_16dp_margin"
    android:layout_marginRight="@dimen/activity_16dp_margin"
    android:layout_marginTop="@dimen/activity_8dp_margin"
    android:orientation="vertical"
    tools:context="com.example.fazazulfikapp.myapplication.view.activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_16dp_margin"
        android:gravity="center"
        android:text="@string/main_title"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_32dp_margin"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="moveActivity"
            android:padding="@dimen/activity_24dp_margin"
            android:text="@string/circle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_8dp_margin"
            android:onClick="moveActivity"
            android:padding="@dimen/activity_24dp_margin"
            android:text="@string/square" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_8dp_margin"
            android:onClick="moveActivity"
            android:padding="@dimen/activity_24dp_margin"
            android:text="@string/trapezoidal" />

    </LinearLayout>

</LinearLayout>
